--- a/data/_factory/config_voice.json
+++ b/data/_factory/config_voice.json
@@ -4,8 +4,8 @@
   "b": 44,
   "brightness": 0.4189999997615814,
   "g": 165,
-  "hue": 0.12800000607967377,
+  "hue": 0.0689999982714653,
   "instrument": "/voice",
-  "renderColor": -5724884,
+  "renderColor": -331253,
   "enabled": true
 }
